2004-09-02  Dale Johannesen  <dalej@apple.com>

	Radar 3775798
	* config/rs6000/power4.md:  Increase store latency to 12.

2004-07-21  Dale Johannesen  <dalej@apple.com>

	* cgraphunit.c:  Revert to 1.1.2.12 (before Stuart's 7/8 change).
	Per Ron.

2004-07-16  Stuart Hastings <stuart@apple.com>
	
	Radar 3723483
	* gcc/cgraph.c (cgraph_node): Rebuild hash table after PCH load.
	
2004-07-13  Stuart Hastings <stuart@apple.com>
	
	Radar 3717771
	* gcc/cgraphunit.c (cgraph_inlinable_function_p): Fudge
	current_function_decl, tricking c_cannot_inline_tree_fn() to
	perform necessary tree-walk.
	Radar 3723012
	* gcc/cgraphunit.c (cgraph_call_desirability): Calls inside
	nested functions are now undesirable for inlining.
	
2004-07-12  Matthew Sachs  <msachs@apple.com>

        Radar 3676770
        * bad cw asm codegen in 3.3

2004-07-12  Caroline Tice  <ctice@apple.com>

       Radar 3258482
       * config/rs6000/rs6000.c (fix_rbi_next_info_for_blocks): Delete
       now unused function.  
       (rs6000_inline_floor_calls): Remove code that generates incorrect
       old sequence; replace it with code that generates correct new
       sequence of instructions for calculating floor quickly.

2004-07-10  Andrew Pinski <apinski@apple.com>

       Radar 3658100, 3623788, and 3661615
       * c-decl.c (c_reset_state): Fix regression caused
       by doing loop transport. Backported from gcc3.5

2004-07-08  Stuart Hastings <stuart@apple.com>
	
	Radar 3717771
	* gcc/cgraphunit.c (cgraph_inlinable_function_p): Make nested
	functions undesirable for inlining.
	
2004-07-08  Fariborz Jahanian <fjahanian@apple.com>
	Radar 3715841
	* config/rs6000/rs6000.h (HARD_REGNO_NREGS): Macro updated.
	*config/rs6000/rs6000.c (rs6000_function_value): Add support for
	complex types.
	(function_arg): Ditto.

2004-07-02  Dale Johannesen  <dalej@apple.com>
	Radar 3430683
	* alias.c (struct_field_array_alias):  New.
	(struct_field_field_alias):  Call above.  Clean up warnings.