@@ -16,7 +16,7 @@
    - There are other scripts that search for first word of the string
      to get version number string. Do not use new line.
 */
-const char version_string[] = "3.3-fast 20030304 (Apple Computer, Inc. build 1622)";
+const char version_string[] = "3.3-fast 20030304 (Apple Computer, Inc. build 1626)";
 /* APPLE LOCAL end Apple version */
 
 /* This is the location of the online document giving instructions for
